manifests/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: jeet1418/vproapp:v1
        ports:
        - name: vproapp-port
          containerPort: 8080
