manifests/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb-deploy
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: jeet1418/vprodb:v1
        volumeMounts:
        - name: vprodb-data
          mountPath: /var/lib/mysql
        ports:
        - name: vprodb-port
          containerPort: 3306

      volumes:
      - name: vprodb-data
        persistentVolumeClaim:
          claimName: vprodb-pvc
          
# We are using an initContainer to clean up the data directory before starting the MySQL container. This is useful in scenarios where we want to ensure that the database starts with a clean state, especially during development or testing phases.
